CesiumGen/Headers/cesium/cesium_tileset.h

typedef struct CesiumTileset CesiumTileset;
typedef struct CesiumViewUpdateResult CesiumViewUpdateResult;
typedef struct CesiumTile CesiumTile;
/* ============================================================================
 * Tile load state enum
 * ========================================================================= */

typedef enum CesiumTileLoadState {
    CESIUM_TILE_LOAD_STATE_UNLOADING = -2,
    CESIUM_TILE_LOAD_STATE_FAILED_TEMPORARILY = -1,
    CESIUM_TILE_LOAD_STATE_UNLOADED = 0,
    CESIUM_TILE_LOAD_STATE_CONTENT_LOADING = 1,
    CESIUM_TILE_LOAD_STATE_CONTENT_LOADED = 2,
    CESIUM_TILE_LOAD_STATE_DONE = 3,
    CESIUM_TILE_LOAD_STATE_FAILED = 4
} CesiumTileLoadState;
/**
 * @brief Callback invoked when the root tile becomes available.
 * @param userData User-provided context.
 */
typedef void (*CesiumRootTileAvailableCallback)(void* userData);
/**
 * @brief Returns 1 if the root tile is available, 0 otherwise (polling).
 */
CESIUM_API int cesium_tileset_is_root_tile_available(const CesiumTileset* tileset);
/**
 * @brief Sets a callback that fires when the root tile becomes available.
 * Pass NULL to clear.
 */
CESIUM_API void cesium_tileset_set_root_tile_available_callback(
    CesiumTileset* tileset,
    CesiumRootTileAvailableCallback callback,
    void* userData);
/**
 * @brief Computes the percentage of tiles loaded for the default view group.
 * @return A value between 0.0 and 100.0.
 */
CESIUM_API float cesium_tileset_compute_load_progress(CesiumTileset* tileset);
/**
 * @brief Gets the total number of tiles currently loaded.
 */
CESIUM_API int32_t cesium_tileset_get_number_of_tiles_loaded(const CesiumTileset* tileset);
/**
 * @brief Gets the total data bytes of loaded tile and overlay data.
 */
CESIUM_API int64_t cesium_tileset_get_total_data_bytes(const CesiumTileset* tileset);
/* ============================================================================
 * ViewUpdateResult (borrowed pointer from cesium_tileset_update_view)
 * ========================================================================= */

/**
 * @brief Gets the number of tiles to render this frame.
 */
CESIUM_API int cesium_view_update_result_get_tiles_to_render_count(const CesiumViewUpdateResult* result);
/**
 * @brief Gets a tile to render by index.
 * @param result The update result.
 * @param index Index in [0, count).
 * @return Borrowed pointer to the tile.
 */
CESIUM_API const CesiumTile* cesium_view_update_result_get_tile_to_render(
    const CesiumViewUpdateResult* result,
    int index);
/**
 * @brief Gets the number of tiles fading out.
 */
CESIUM_API int cesium_view_update_result_get_tiles_fading_out_count(const CesiumViewUpdateResult* result);
/**
 * @brief Gets the current frame number.
 */
CESIUM_API int32_t cesium_view_update_result_get_frame_number(const CesiumViewUpdateResult* result);
/**
 * @brief Gets the number of tiles visited during traversal.
 */
CESIUM_API uint32_t cesium_view_update_result_get_tiles_visited(const CesiumViewUpdateResult* result);
/**
 * @brief Gets the number of tiles culled during traversal.
 */
CESIUM_API uint32_t cesium_view_update_result_get_tiles_culled(const CesiumViewUpdateResult* result);
/**
 * @brief Gets the maximum tree depth visited.
 */
CESIUM_API uint32_t cesium_view_update_result_get_max_depth_visited(const CesiumViewUpdateResult* result);
/**
 * @brief Gets the worker thread tile load queue length.
 */
CESIUM_API int32_t cesium_view_update_result_get_worker_thread_load_queue_length(const CesiumViewUpdateResult* result);
/**
 * @brief Gets the main thread tile load queue length.
 */
CESIUM_API int32_t cesium_view_update_result_get_main_thread_load_queue_length(const CesiumViewUpdateResult* result);
/* ============================================================================
 * Tile (read-only accessors on borrowed pointers)
 * ========================================================================= */

/**
 * @brief Gets the tile's geometric error in meters.
 */
CESIUM_API double cesium_tile_get_geometric_error(const CesiumTile* tile);
/**
 * @brief Gets the tile's 4x4 transform matrix.
 */
CESIUM_API CesiumMat4 cesium_tile_get_transform(const CesiumTile* tile);
/**
 * @brief Gets the tile's load state.
 */
CESIUM_API CesiumTileLoadState cesium_tile_get_load_state(const CesiumTile* tile);
/**
 * @brief Returns 1 if the tile has renderable glTF content.
 */
CESIUM_API int cesium_tile_has_render_content(const CesiumTile* tile);
/**
 * @brief Gets the glTF model from a tile's render content.
 * @return Borrowed model pointer, or NULL if the tile has no render content.
 */
CESIUM_API const CesiumGltfModel* cesium_tile_get_render_content_model(const CesiumTile* tile);
/**
 * @brief Gets the renderer resources pointer set by prepareInMainThread.
 * @return The opaque renderer resources, or NULL.
 */
CESIUM_API void* cesium_tile_get_render_resources(const CesiumTile* tile);
/**
 * @brief Gets the number of child tiles.
 */
CESIUM_API int cesium_tile_get_children_count(const CesiumTile* tile);
/**
 * @brief Gets a child tile by index.
 */
CESIUM_API const CesiumTile* cesium_tile_get_child(const CesiumTile* tile, int index);
/**
 * @brief Gets the tile's bounding volume.
 */
CESIUM_API CesiumBoundingVolume cesium_tile_get_bounding_volume(const CesiumTile* tile);
/**
 * @brief Gets the LOD transition fade percentage (0.0 to 1.0).
 * Only meaningful when LOD transitions are enabled.
 */
CESIUM_API float cesium_tile_get_lod_transition_fade_percentage(const CesiumTile* tile);