Evergine.Bindings.CesiumNative/Generated/Functions.cs


		/// <summary>
		/// @brief Returns 1 if the root tile is available, 0 otherwise (polling).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_tileset_is_root_tile_available(IntPtr tileset);

		/// <summary>
		/// @brief Sets a callback that fires when the root tile becomes available.
		/// Pass NULL to clear.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_tileset_set_root_tile_available_callback(IntPtr tileset, CesiumRootTileAvailableCallback callback, void* userData);

		/// <summary>
		/// @brief Computes the percentage of tiles loaded for the default view group.
		/// @return A value between 0.0 and 100.0.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern float cesium_tileset_compute_load_progress(IntPtr tileset);

		/// <summary>
		/// @brief Gets the total number of tiles currently loaded.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_tileset_get_number_of_tiles_loaded(IntPtr tileset);

		/// <summary>
		/// @brief Gets the total data bytes of loaded tile and overlay data.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern long cesium_tileset_get_total_data_bytes(IntPtr tileset);

		/// <summary>
		/// @brief Gets the number of tiles to render this frame.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_view_update_result_get_tiles_to_render_count(IntPtr result);

		/// <summary>
		/// @brief Gets a tile to render by index.
		/// @param result The update result.
		/// @param index Index in [0, count).
		/// @return Borrowed pointer to the tile.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_view_update_result_get_tile_to_render(IntPtr result, int index);

		/// <summary>
		/// @brief Gets the number of tiles fading out.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_view_update_result_get_tiles_fading_out_count(IntPtr result);

		/// <summary>
		/// @brief Gets the current frame number.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_view_update_result_get_frame_number(IntPtr result);

		/// <summary>
		/// @brief Gets the number of tiles visited during traversal.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern uint cesium_view_update_result_get_tiles_visited(IntPtr result);

		/// <summary>
		/// @brief Gets the number of tiles culled during traversal.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern uint cesium_view_update_result_get_tiles_culled(IntPtr result);

		/// <summary>
		/// @brief Gets the maximum tree depth visited.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern uint cesium_view_update_result_get_max_depth_visited(IntPtr result);

		/// <summary>
		/// @brief Gets the worker thread tile load queue length.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_view_update_result_get_worker_thread_load_queue_length(IntPtr result);

		/// <summary>
		/// @brief Gets the main thread tile load queue length.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_view_update_result_get_main_thread_load_queue_length(IntPtr result);

		/// <summary>
		/// @brief Gets the tile's geometric error in meters.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern double cesium_tile_get_geometric_error(IntPtr tile);

		/// <summary>
		/// @brief Gets the tile's 4x4 transform matrix.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern CesiumMat4 cesium_tile_get_transform(IntPtr tile);

		/// <summary>
		/// @brief Gets the tile's load state.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern CesiumTileLoadState cesium_tile_get_load_state(IntPtr tile);

		/// <summary>
		/// @brief Returns 1 if the tile has renderable glTF content.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_tile_has_render_content(IntPtr tile);

		/// <summary>
		/// @brief Gets the glTF model from a tile's render content.
		/// @return Borrowed model pointer, or NULL if the tile has no render content.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_tile_get_render_content_model(IntPtr tile);

		/// <summary>
		/// @brief Gets the renderer resources pointer set by prepareInMainThread.
		/// @return The opaque renderer resources, or NULL.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void* cesium_tile_get_render_resources(IntPtr tile);

		/// <summary>
		/// @brief Gets the number of child tiles.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_tile_get_children_count(IntPtr tile);

		/// <summary>
		/// @brief Gets a child tile by index.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_tile_get_child(IntPtr tile, int index);

		/// <summary>
		/// @brief Gets the tile's bounding volume.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern CesiumBoundingVolume cesium_tile_get_bounding_volume(IntPtr tile);

		/// <summary>
		/// @brief Gets the LOD transition fade percentage (0.0 to 1.0).
		/// Only meaningful when LOD transitions are enabled.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern float cesium_tile_get_lod_transition_fade_percentage(IntPtr tile);
	}
}
